--- a/StreetCar/StreetCar/NewLocalGame.ui
+++ b/StreetCar/StreetCar/NewLocalGame.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>506</width>
+    <width>525</width>
     <height>386</height>
    </rect>
   </property>
@@ -242,7 +242,7 @@ QPushButton {
               <number>4</number>
              </property>
              <attribute name="horizontalHeaderVisible">
-              <bool>true</bool>
+              <bool>false</bool>
              </attribute>
              <attribute name="horizontalHeaderHighlightSections">
               <bool>true</bool>
@@ -321,7 +321,7 @@ QPushButton {
                <string/>
               </property>
               <property name="flags">
-               <set>NoItemFlags</set>
+               <set>ItemIsSelectable|ItemIsEnabled</set>
               </property>
              </item>
              <item row="0" column="3">
@@ -330,6 +330,26 @@ QPushButton {
               </property>
               <property name="flags">
                <set>ItemIsSelectable|ItemIsEditable|ItemIsEnabled</set>
+              </property>
+             </item>
+             <item row="1" column="1">
+              <property name="flags">
+               <set>NoItemFlags</set>
+              </property>
+             </item>
+             <item row="2" column="1">
+              <property name="flags">
+               <set>NoItemFlags</set>
+              </property>
+             </item>
+             <item row="3" column="1">
+              <property name="flags">
+               <set>NoItemFlags</set>
+              </property>
+             </item>
+             <item row="4" column="1">
+              <property name="flags">
+               <set>NoItemFlags</set>
               </property>
              </item>
             </widget>
