--- a/StreetCar/StreetCar/MainMenu.ui
+++ b/StreetCar/StreetCar/MainMenu.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>360</width>
-    <height>359</height>
+    <height>364</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,16 @@
    <property name="spacing">
     <number>6</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -48,7 +57,13 @@
 
 QPushButton {
 	background-color: rgba(255, 255, 255, 0);
-}</string>
+}
+
+QPushButton:hover {
+	background-color:rgba(255, 0, 0, 50);;
+}
+
+</string>
      </property>
      <property name="title">
       <string/>
@@ -191,8 +206,8 @@ QPushButton {
           </property>
           <property name="iconSize">
            <size>
-            <width>16</width>
-            <height>16</height>
+            <width>80</width>
+            <height>30</height>
            </size>
           </property>
          </widget>
@@ -254,6 +269,12 @@ QPushButton {
            <iconset>
             <normaloff>:/images/trainButton</normaloff>:/images/trainButton</iconset>
           </property>
+          <property name="iconSize">
+           <size>
+            <width>80</width>
+            <height>30</height>
+           </size>
+          </property>
          </widget>
         </item>
         <item>
@@ -305,6 +326,12 @@ QPushButton {
           </property>
           <property name="text">
            <string>Nouveau jeu (réseau)</string>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>80</width>
+            <height>30</height>
+           </size>
           </property>
          </widget>
         </item>
@@ -358,6 +385,12 @@ QPushButton {
           <property name="text">
            <string>Charger une partie</string>
           </property>
+          <property name="iconSize">
+           <size>
+            <width>80</width>
+            <height>30</height>
+           </size>
+          </property>
          </widget>
         </item>
         <item>
@@ -409,6 +442,12 @@ QPushButton {
           </property>
           <property name="text">
            <string>Profil</string>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>80</width>
+            <height>30</height>
+           </size>
           </property>
          </widget>
         </item>
