--- a/StreetCar/StreetCar/OptionsMenu.ui
+++ b/StreetCar/StreetCar/OptionsMenu.ui
@@ -23,7 +23,16 @@ QPushButton {
 }</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -39,6 +48,10 @@ QPushButton {
 
 QPushButton {
 	background-color: rgba(255, 255, 255, 0);
+}
+
+QPushButton:hover {
+	background-color:rgba(255, 0, 0, 50);;
 }</string>
      </property>
      <property name="title">
