--- a/StreetCar/StreetCar/ressources.qrc
+++ b/StreetCar/StreetCar/ressources.qrc
@@ -20,4 +20,12 @@
         <file alias="carteArrets12">images/cartes/carteArrets12.png</file>
         <file alias="cartesBack">images/cartes/cartesBack.png</file>
     </qresource>
+    <qresource prefix="/avatars">
+        <file alias="avatar1">images/avatars/avatar1.jpg</file>
+        <file alias="avatar2">images/avatars/avatar2.jpg</file>
+        <file alias="avatar3">images/avatars/avatar3.jpg</file>
+        <file alias="avatar4">images/avatars/avatar4.jpg</file>
+        <file alias="avatar5">images/avatars/avatar5.jpg</file>
+        <file alias="avatar6">images/avatars/avatar6.jpg</file>
+    </qresource>
 </RCC>
