--- a/StreetCar/StreetCar/NewLocalGame.ui
+++ b/StreetCar/StreetCar/NewLocalGame.ui
@@ -204,7 +204,7 @@ QPushButton {
          <widget class="QGroupBox" name="groupBox_2">
           <property name="minimumSize">
            <size>
-            <width>425</width>
+            <width>430</width>
             <height>0</height>
            </size>
           </property>
@@ -228,6 +228,9 @@ QPushButton {
              </property>
              <property name="lineWidth">
               <number>1</number>
+             </property>
+             <property name="horizontalScrollBarPolicy">
+              <enum>Qt::ScrollBarAlwaysOff</enum>
              </property>
              <property name="iconSize">
               <size>
