ajout type profil

--- a/StreetCar/StreetCar/ChooseCards.ui
+++ b/StreetCar/StreetCar/ChooseCards.ui
@@ -16,6 +16,12 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QGroupBox" name="groupBox">
+     <property name="font">
+      <font>
+       <family>Serif</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="styleSheet">
       <string notr="true">QPushButton {
 	border-image: url(:/cards/cartesBack);
@@ -111,6 +117,12 @@
    </item>
    <item>
     <widget class="QGroupBox" name="groupBox_2">
+     <property name="font">
+      <font>
+       <family>Serif</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="styleSheet">
       <string notr="true">QPushButton {
 	border-image: url(:/cards/cartesBack);
