--- a/StreetCar/StreetCar/PlayerWidget.ui
+++ b/StreetCar/StreetCar/PlayerWidget.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>PlayerWidget</class>
  <widget class="QWidget" name="PlayerWidget">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>194</width>
+    <height>219</height>
+   </rect>
+  </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
     <horstretch>0</horstretch>
