Gestion des erreur, affichage des avatar, implementation du undo "redo"

--- a/StreetCar/StreetCar/PlayerWidget.ui
+++ b/StreetCar/StreetCar/PlayerWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>194</width>
-    <height>219</height>
+    <width>252</width>
+    <height>220</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -41,6 +41,13 @@
           </property>
           <property name="text">
            <string>joueur</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="labelAvatar">
+          <property name="text">
+           <string>Avatar</string>
           </property>
          </widget>
         </item>
