--- a/StreetCar/StreetCar/CreditsOption.ui
+++ b/StreetCar/StreetCar/CreditsOption.ui
@@ -30,6 +30,11 @@
 
 QPushButton {
 	background-color: rgba(255, 255, 255, 0);
+}
+
+QPushButton::hover{
+	background-color: rgba(255, 0, 0, 100);
+	font-weight: bold;
 }</string>
      </property>
      <property name="title">
