--- a/StreetCar/StreetCar/GraphicsOption.ui
+++ b/StreetCar/StreetCar/GraphicsOption.ui
@@ -43,6 +43,11 @@ QPushButton {
 
 QPushButton {
 	background-color: rgba(255, 255, 255, 0);
+}
+
+QPushButton::hover{
+	background-color: rgba(255, 0, 0, 100);
+	font-weight: bold;
 }</string>
      </property>
      <property name="title">
@@ -142,8 +147,11 @@ QPushButton {
          <widget class="QGroupBox" name="groupBoxMusic">
           <property name="styleSheet">
            <string notr="true">#groupBoxMusic {
-	background-color:yellow;
-	border: 3px solid orange;
+	background-color: rgba(255,128, 0, 100);
+}
+
+QRadioButton::hover{
+		background-color: rgba(255,128, 0, 100);
 }</string>
           </property>
           <property name="title">
